Problem with final version of file in db